[fix] Java 8 호환성 문제 수정
- List.of() → Collections.singletonList() 변경
- ChannelOption import 경로 수정
- 사용하지 않는 import 제거